# madeup

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
docs/: Makefile  README.md  boxes.md  dots.md  extrude.md  header.html  introduction.md  madeup_scanner.rb  reference.md  revolve.md  spheres.md  surface.md  tohtml
docs/css/: coderay.css
docs/html/: boxes.html  dots.html  extrude.html  introduction.html  reference.html  revolve.html  spheres.html  surface.html
docs/html/css/: coderay.css
electron/: .gitignore  Makefile  bridge.js  main.js  package-lock.json  package.json
include/madeup/: Environment.h  Expression.h  ExpressionAbsoluteValue.h  ExpressionAdd.h  ExpressionAll.h  ExpressionAnd.h  ExpressionAny.h  ExpressionAppend.h  ExpressionArray.h  ExpressionAxis.h  ExpressionBlobs.h  ExpressionBlock.h  ExpressionBoolean.h  ExpressionBox.h  ExpressionBoxes.h  ExpressionCall.h  ExpressionCallWithNamedParameters.h  ExpressionCamera.h  ExpressionCenter.h  ExpressionClosure.h  ExpressionCoalesce.h  ExpressionComment.h  ExpressionCosine.h  ExpressionCross.h  ExpressionDebug.h  ExpressionDecimal.h  ExpressionDecimalDivide.h  ExpressionDefine.h  ExpressionDefineArrayElement.h  ExpressionDefineElement.h  ExpressionDefineVariable.h  ExpressionDilate.h  ExpressionDistort.h  ExpressionDivide.h  ExpressionDot.h  ExpressionDowel.h  ExpressionDynamicMinus.h  ExpressionEcho.h  ExpressionEqual.h  ExpressionExtrude.h  (+89 more)
include/twodee/: Ball.h  Box.h  Camera.h  Co.h  Configuration.h  Configuration.h.in  ContourMarcher.h  FieldTraits.h  FieldType.h  Line.h  LineSegment.h  Log.h  MessagedException.h  MinHeap.h  NField.h  NFieldBase.h  NFieldIterator.h  Plane.h  Polyline.h  QMath.h  QMatrix.h  QMatrix4.h  QSquareMatrix.h  QVector.h  QVector2.h  QVector3.h  QVector4.h  Scanner.h  Triangle.h  Trimesh.h  Utilities.h  Vector.h
modules/: FindEigen3.cmake
src/: CMakeLists.txt  lex.cpp  merp.cpp  parse.cpp
src/desktop/: CMakeLists.txt  Configuration.h  Log.cpp  MadeupCanvas.cpp  MadeupCanvas.h  MadeupEditor.cpp  MadeupEditor.h  MadeupRenderer.cpp  MadeupRenderer.h  MadeupWindow.cpp  MadeupWindow.h  MupperWindow.cpp  MupperWindow.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  Trackball.cpp  Trackball.h  UniformManager.cpp  UniformManager.h  Utilities.cpp  UtilitiesOpenGL.cpp  UtilitiesOpenGL.h  VertexArray.cpp  VertexArray.h  VertexAttributes.cpp  VertexAttributes.h  madeup.cpp  mupper.cpp  mupper_window.ui
src/madeup/: CMakeLists.txt  Environment.cpp  Expression.cpp  ExpressionAbsoluteValue.cpp  ExpressionAdd.cpp  ExpressionAll.cpp  ExpressionAnd.cpp  ExpressionAny.cpp  ExpressionAppend.cpp  ExpressionArray.cpp  ExpressionAxis.cpp  ExpressionBlobs.cpp  ExpressionBlock.cpp  ExpressionBoolean.cpp  ExpressionBox.cpp  ExpressionBoxes.cpp  ExpressionCall.cpp  ExpressionCallWithNamedParameters.cpp  ExpressionCamera.cpp  ExpressionCenter.cpp  ExpressionClosure.cpp  ExpressionCoalesce.cpp  ExpressionComment.cpp  ExpressionCosine.cpp  ExpressionCross.cpp  ExpressionDebug.cpp  ExpressionDefine.cpp  ExpressionDefineArrayElement.cpp  ExpressionDefineArrayElement.cpp.bak  ExpressionDefineElement.cpp  ExpressionDefineVariable.cpp  ExpressionDelay.cpp  ExpressionDilate.cpp  ExpressionDistort.cpp  ExpressionDivide.cpp  ExpressionDot.cpp  ExpressionDowel.cpp  ExpressionDynamicMinus.cpp  ExpressionEcho.cpp  ExpressionEqual.cpp  (+87 more)
src/twodee/: CMakeLists.txt  Camera.cpp  FieldTraits.cpp  Log.cpp  MessagedException.cpp  NFieldBase.cpp  Scanner.cpp  Trimesh.cpp  Utilities.cpp
test/: CMakeLists.txt  camera.cpp  nfield.cpp  nfielditerator.cpp  qmath.cpp  qmatrix.cpp  qmatrix4.cpp  qsquarematrix.cpp  qvector.cpp  qvector3.cpp  scanner.cpp  test_mups  test_subtract.cpp
test/mups/: test_array.mup  test_array_literals.mup  test_bad_property.mup  test_bad_type.mup  test_common_closure.mup  test_define.mup  test_define_bad_single_or_multi.mup  test_error_multiline_comment.mup  test_exprs.mup  test_length.mup  test_min_max.mup  test_missing_comma.mup  test_mutual.mup  test_negation.mup  test_negative_indices.mup  test_nested_calls.mup  test_predeclare.mup  test_predeclare_clobber.mup  test_random_seed.mup  test_recursive_env.mup  test_repeat.mup  test_repeatwich.mup  test_shadowing.mup  test_shared.mup  test_size.mup
test/mups/expecteds/: test_array.err  test_array.out  test_array.tokens  test_array.tree  test_array_literals.out  test_array_literals.tokens  test_array_literals.tree  test_bad_property.err  test_bad_property.tokens  test_bad_type.err  test_bad_type.tokens  test_bad_type.tree  test_common_closure.err  test_common_closure.tokens  test_common_closure.tree  test_define.out  test_define.tokens  test_define.tree  test_define_bad_single_or_multi.err  test_define_bad_single_or_multi.tokens  test_error_multiline_comment.err  test_error_multiline_comment.tokens  test_exprs.err  test_exprs.tokens  test_exprs.tree  test_length.tokens  test_length.tree  test_min_max.out  test_min_max.tokens  test_min_max.tree  test_missing_comma.err  test_missing_comma.tokens  test_missing_parameters.err  test_missing_parameters.tokens  test_missing_parameters.tree  test_mutual.tokens  test_mutual.tree  test_negation.out  test_negation.tokens  test_negation.tree  (+28 more)
www/: Makefile  block_definitions.js  blockly_blocks_madeup.js  blockly_generator_madeup.js  bridge.js  forn  ide_editor.js  ide_function.js  ide_skin.css  ide_skin_dark.css  ide_skin_light.css  index.html  index.php  interpret.php  keystrokes.js  mode-madeup.js  save.php  snapshot.php  text_to_blocks.js  translate.php
www/css/: ide_skin.css  ide_skin_dark.css  ide_skin_light.css
www/docs/: Makefile  blinky.gray  endless_knot1.gray  first.gray  gear.gray  index.gray  marble.gray  maze.gray  ring.gray  ring_polar.gray  sdowel.gray  snowflake.gray  star.gray  sun.gray  top.gray  tree.gray  varring.gray  view_look.gray
www/docs/html/: blinky.html  endless_knot1.html  (+15 more)
www/js/: block_definitions.js  blockly_blocks_madeup.js  core.js  ide_editor.js  ide_function.js  keystrokes.js  mode-madeup.js  text_to_blocks.js
www/privacy/: index.html
(+2 files in other folders)
