add_library(madeup
  STATIC
  Environment.cpp
  Expression.cpp
  ExpressionAbsoluteValue.cpp
  ExpressionAdd.cpp
  ExpressionAll.cpp
  ExpressionAny.cpp
  ExpressionAnd.cpp
  ExpressionArray.cpp
  ExpressionAxis.cpp
  ExpressionBlobs.cpp
  ExpressionBlock.cpp
  ExpressionBoolean.cpp
  ExpressionBoxes.cpp
  ExpressionCall.cpp
  ExpressionCallWithNamedParameters.cpp
  ExpressionCenter.cpp
  ExpressionClosure.cpp
  ExpressionCoalesce.cpp
  ExpressionComment.cpp
  ExpressionCosine.cpp
  ExpressionCross.cpp
  ExpressionDebug.cpp
  ExpressionDefine.cpp
  ExpressionDefineElement.cpp
  ExpressionDefineVariable.cpp
  ExpressionDivide.cpp
  ExpressionDot.cpp
  ExpressionSpheres.cpp
  ExpressionDowel.cpp
  ExpressionEcho.cpp
  ExpressionEqual.cpp
  ExpressionExtrude.cpp
  ExpressionFor.cpp
  ExpressionForget.cpp
  ExpressionGreater.cpp
  ExpressionGreaterOrEqual.cpp
  ExpressionHome.cpp
  ExpressionIdentity.cpp
  ExpressionIf.cpp
  ExpressionInteger.cpp
  ExpressionInverseCosine.cpp
  ExpressionInverseSine.cpp
  ExpressionInverseTangent.cpp
  ExpressionLesser.cpp
  ExpressionLesserOrEqual.cpp
  ExpressionLog.cpp
  ExpressionMagnitude.cpp
  ExpressionMax.cpp
  ExpressionMesh.cpp 
  ExpressionMin.cpp
  ExpressionMove.cpp
  ExpressionMoveTo.cpp
  ExpressionMultiply.cpp
  ExpressionNegation.cpp
  ExpressionNormalize.cpp
  ExpressionNot.cpp
  ExpressionNotEqual.cpp
  ExpressionNumber.cpp
  ExpressionOr.cpp
  ExpressionPitch.cpp
  ExpressionPolygon.cpp
  ExpressionPop.cpp
  ExpressionPower.cpp
  ExpressionPrint.cpp
  ExpressionPush.cpp
  ExpressionRandom.cpp
  ExpressionReal.cpp
  ExpressionRealDivide.cpp
  ExpressionReframe.cpp
  ExpressionRemainder.cpp
  ExpressionRepeat.cpp
  ExpressionRepeatwich.cpp
  ExpressionReverse.cpp
  ExpressionRevolve.cpp
  ExpressionRoll.cpp
  ExpressionRotate.cpp
  ExpressionScale.cpp
  ExpressionSign.cpp
  ExpressionSine.cpp
  ExpressionSize.cpp
  ExpressionString.cpp
  ExpressionSubrange.cpp
  ExpressionSubscript.cpp
  ExpressionSubtract.cpp
  ExpressionSurface.cpp
  ExpressionTangent.cpp
  ExpressionTranslate.cpp
  ExpressionTube.cpp
  ExpressionUnit.cpp
  ExpressionWhere.cpp
  ExpressionWhile.cpp
  ExpressionYaw.cpp
  Lexer.cpp
  MeshBoolean.cpp
  Token.cpp
  SourceLocation.cpp
  Parser.cpp
)

target_link_libraries(madeup
  twodee 
  /usr/local/lib/libmpfr.dylib
  /usr/local/lib/libgmp.dylib
  /usr/local/lib/libCGAL.dylib
  ${Boost_LOG_SETUP_LIBRARY}
  ${Boost_LOG_LIBRARY}
  ${Boost_FILESYSTEM_LIBRARY}
  ${Boost_THREAD_LIBRARY}
  ${Boost_SYSTEM_LIBRARY}
)

include_directories(
  madeup
  ${CMAKE_SOURCE_DIR}/include
  /usr/local/include
  ${CMAKE_BINARY_DIR}/libigl/include
  /usr/local/include/eigen3
)
