set(LIBMADEUP_SRC_EXTRAS)
if(USE_IGL)
  list(APPEND LIBMADEUP_SRC_EXTRAS MeshBoolean.cpp)
endif()

add_library(madeup
  STATIC
  Environment.cpp
  Expression.cpp
  ExpressionAbsoluteValue.cpp
  ExpressionAdd.cpp
  ExpressionAll.cpp
  ExpressionAny.cpp
  ExpressionAnd.cpp
  ExpressionArray.cpp
  ExpressionAxis.cpp
  ExpressionBlobs.cpp
  ExpressionBlock.cpp
  ExpressionBoolean.cpp
  ExpressionBoxes.cpp
  ExpressionCall.cpp
  ExpressionCallWithNamedParameters.cpp
  ExpressionCenter.cpp
  ExpressionClosure.cpp
  ExpressionCoalesce.cpp
  ExpressionComment.cpp
  ExpressionCosine.cpp
  ExpressionCross.cpp
  ExpressionDebug.cpp
  ExpressionDefine.cpp
  ExpressionDefineElement.cpp
  ExpressionDefineVariable.cpp
  ExpressionDilate.cpp
  ExpressionDivide.cpp
  ExpressionDot.cpp
  ExpressionSpheres.cpp
  ExpressionDowel.cpp
  ExpressionEcho.cpp
  ExpressionEqual.cpp
  ExpressionExtrude.cpp
  ExpressionFor.cpp
  ExpressionForget.cpp
  ExpressionGreater.cpp
  ExpressionGreaterOrEqual.cpp
  ExpressionHome.cpp
  ExpressionIdentity.cpp
  ExpressionIf.cpp
  ExpressionInteger.cpp
  ExpressionInverseCosine.cpp
  ExpressionInverseSine.cpp
  ExpressionInverseTangent.cpp
  ExpressionLesser.cpp
  ExpressionLesserOrEqual.cpp
  ExpressionLoft.cpp
  ExpressionLog.cpp
  ExpressionMagnitude.cpp
  ExpressionMax.cpp
  ExpressionMesh.cpp 
  ExpressionMin.cpp
  ExpressionModeAdd.cpp
  ExpressionModeSubtract.cpp
  ExpressionMove.cpp
  ExpressionMoveX.cpp
  ExpressionMoveTo.cpp
  ExpressionMultiply.cpp
  ExpressionNegation.cpp
  ExpressionNodes.cpp
  ExpressionNormalize.cpp
  ExpressionNot.cpp
  ExpressionNotEqual.cpp
  ExpressionNumber.cpp
  ExpressionOr.cpp
  ExpressionPath.cpp
  ExpressionPitch.cpp
  ExpressionPolygon.cpp
  ExpressionPop.cpp
  ExpressionPower.cpp
  ExpressionPrint.cpp
  ExpressionPush.cpp
  ExpressionRandom.cpp
  ExpressionReal.cpp
  ExpressionRealDivide.cpp
  ExpressionReframe.cpp
  ExpressionRemainder.cpp
  ExpressionRepeat.cpp
  ExpressionRepeatwich.cpp
  ExpressionReverse.cpp
  ExpressionRevolve.cpp
  ExpressionRoll.cpp
  ExpressionRotate.cpp
  ExpressionScale.cpp
  ExpressionSign.cpp
  ExpressionSine.cpp
  ExpressionSize.cpp
  ExpressionString.cpp
  ExpressionSubrange.cpp
  ExpressionSubscript.cpp
  ExpressionSubtract.cpp
  ExpressionSurface.cpp
  ExpressionTangent.cpp
  ExpressionTranslate.cpp
  ExpressionTransform.cpp
  ExpressionTube.cpp
  ExpressionUnit.cpp
  ExpressionWhere.cpp
  ExpressionWhile.cpp
  ExpressionYaw.cpp
  Lexer.cpp
  Token.cpp
  SourceLocation.cpp
  Parser.cpp
  ${LIBMADEUP_SRC_EXTRAS}
)

include_directories(madeup ${CMAKE_SOURCE_DIR}/include)

if(USE_IGL)
  include_directories(
    madeup
    ${CMAKE_SOURCE_DIR}/libigl/include
    ${EIGEN3_INCLUDE_DIR}
    /usr/local/include
  )
  target_link_libraries(madeup pthread)
endif()
